Converts one module to Java 9